--- a/AYumeRNA/src/main/resources/application.yml
+++ b/AYumeRNA/src/main/resources/application.yml
@@ -1,20 +1,60 @@
 spring:
   datasource:
-    url: jdbc:mysql://223.82.75.77:3306/AYumeRNA
+    url: jdbc:mysql://223.82.75.76:3306/ayumerna
     username: AYumeRNA
-    password: cSejdkCpH6pzFnBK
+    password: aYHPmRMs6inJYSPB
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update   # ??????????, ???? validate, create, none ?
-    show-sql: true        # ????? SQL ???????
+      ddl-auto: update  # Automatically update the database schema. Options include validate, create, none
+    show-sql: true  # Show SQL queries in the logs
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect  # Hibernate ?????
-  # ?? profiles??????
+        dialect: org.hibernate.dialect.MySQLDialect  # Specifies the Hibernate dialect for MySQL
   profiles:
-    active: dev  # ???????????????? profile
+    active: dev  # Active profile set to 'dev'
+
   ai:
     openai:
-      api-key: sk-svBUKMEaKNuuKFU7C2E5Ac00Bc5b498aB344AaE5De9f8b05  # ?? OpenAI API key
-      api-url: https://api.lqqq.ltd/v1  # ?????????? API ??
+      api-key: sk-svBUKMEaKNuuKFU7C2E5Ac00Bc5b498aB344AaE5De9f8b05  # Your OpenAI API key
+      base-url: https://api.lqqq.ltd/v1  # Custom API URL for OpenAI
+
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+
+
+logging:
+  level:
+    root: INFO  # Global logging level
+    org.springframework.web: DEBUG  # Detailed logging for web layer
+
+
+# Application port
+server:
+  port: 36243
+
+# Knife4j configuration
+
+# springdoc-openapi
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.lovelumine.auth.controller
+# knife4j
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+    enable-footer: false
+    enable-footer-custom: true
+    footer-custom-content: Copyright © 2023-2024 Lovelumine
+debug: true
