--- a/AYumeRNA-Python/.gitignore
+++ b/AYumeRNA-Python/.gitignore
@@ -37,3 +37,11 @@ build/
 /__pycache__/
 __pycache__/**
 **/*.pyc
+
+data
+data/**
+
+src/__pycache__
+src/__pycache__/**
+scripts/__pycache__/**
+routes/__pycache__/**
