--- a/AYumeRNA-frontend/package.json
+++ b/AYumeRNA-frontend/package.json
@@ -16,10 +16,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@shene/table": "1.0.0-alpha.24",
+    "bootstrap": "^5.3.3",
     "element-plus": "^2.8.7",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
