--- a/AYumeRNA-frontend/package.json
+++ b/AYumeRNA-frontend/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@shene/table": "1.0.0-alpha.24",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "element-plus": "^2.8.7",
     "pinia": "^2.2.4",
