--- a/AYumeRNA-frontend/package.json
+++ b/AYumeRNA-frontend/package.json
@@ -21,10 +21,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@shene/table": "1.0.0-alpha.24",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "element-plus": "^2.8.7",
+    "global": "^4.4.0",
     "pinia": "^2.2.4",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -32,6 +35,8 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vitest/eslint-plugin": "1.1.7",
