--- a/AYumeRNA-frontend/package.json
+++ b/AYumeRNA-frontend/package.json
@@ -26,6 +26,8 @@
     "bootstrap": "^5.3.3",
     "element-plus": "^2.8.7",
     "global": "^4.4.0",
+    "mathjax": "^3.2.2",
+    "mathjax-full": "^3.2.2",
     "pinia": "^2.2.4",
     "sockjs-client": "^1.6.1",
     "vue": "^3.5.12",
